[tool.poetry]
name = "disjointness"
version = "0.1.0"
description = "Compute the Disjointness of a Stabilizer Code"
authors = ["John Bostanci"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
PuLP = "^2.4"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
